added feature of showing list of users, created chat activity between  two users

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,17 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //for google signing
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //circle image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
