--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatsO">
+        <activity android:name=".ChatDetailActivity"></activity>
         <activity android:name=".SignInActivity">
             android:screenOrientation="portrait">
             <intent-filter>
@@ -17,10 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SignUpActivity">
-
-        </activity>
+        <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".MainActivity" />
     </application>
 
